--- a/Script/MejorandoSCCS.bib
+++ b/Script/MejorandoSCCS.bib
@@ -1,526 +1,7 @@
-
-@book{ladefoged_course_2014,
-	title = {A {Course} in {Phonetics}},
-	language = {en},
-	publisher = {Cengage Learning},
-	author = {Ladefoged, Peter and Johnson, Keith},
-	year = {2014},
-	file = {Ladefoged - A Course in Phonetics.pdf:C\:\\Users\\DELL\\Zotero\\storage\\HHHVPEXP\\Ladefoged - A Course in Phonetics.pdf:application/pdf;Ladefoged - A Course in Phonetics.pdf:C\:\\Users\\DELL\\Zotero\\storage\\DEG9SKM9\\Ladefoged - A Course in Phonetics.pdf:application/pdf},
-}
-
-@book{evans_cognitive_2009,
-	address = {Edinburgh},
-	edition = {Repr},
-	title = {Cognitive linguistics: an introduction},
-	isbn = {978-0-7486-1831-6 978-0-7486-1832-3},
-	shorttitle = {Cognitive linguistics},
-	language = {en},
-	publisher = {Edinburgh Univ. Press},
-	author = {Evans, Vyvyan and Green, Melanie},
-	year = {2009},
-	note = {OCLC: 554082625},
-	file = {Evans and Green - 2009 - Cognitive linguistics an introduction.pdf:C\:\\Users\\DELL\\Zotero\\storage\\K7U7HLCJ\\Evans and Green - 2009 - Cognitive linguistics an introduction.pdf:application/pdf;Evans and Green - 2009 - Cognitive linguistics an introduction.pdf:C\:\\Users\\DELL\\Zotero\\storage\\SF2K3JBL\\Evans and Green - 2009 - Cognitive linguistics an introduction.pdf:application/pdf},
-}
-
-@article{brumm_evolution_2011,
-	title = {The evolution of the Lombard effect: 100 years of psychoacoustic research},
-	volume = {148},
-	issn = {0005-7959, 1568-539X},
-	shorttitle = {The evolution of the Lombard effect},
-	doi = {10.1163/000579511X605759},
-	abstract = {On the occasion of the centenary of the discovery of the Lombard effect, we review the literature on noise-dependent regulation of vocal amplitude in humans and other animals. The article addresses the scientiﬁc and the biological history of the Lombard effect: ﬁrst, it sketches the evolution of the study of the Lombard effect, and second it reﬂects on the biological evolution of the effect itself. By comparing the ﬁndings from anurans, birds and mammals, we try to trace back the phylogenetic origins of this basic vocal mechanism for acoustic communication in noise. The current evidence suggests two alternative parsimonious hypotheses: either the Lombard effect is the outcome of a convergent evolution in birds and mammals or it may be a synapomorphy of all amniotes. If the latter is true, then the Lombard effect would have evolved to maintain vocal communication in the presence of noise more than 300 million years ago.},
-	language = {en},
-	number = {11-13},
-	urldate = {2020-10-05},
-	journal = {Behaviour},
-	author = {Brumm, Henrik and Zollinger, Sue Anne},
-	year = {2011},
-	pages = {1173--1198},
-}
-
-@article{lombard_signe_1911,
-	title = {Le signe de l'\'{e}l\'{e}vation de la voix},
-	volume = {37},
-	journal = {Annales des Maladies de l'Oreille, du Larynx, du Nex et du Pharynx},
-	author = {Lombard, \'{e}tienne},
-	year = {1911},
-	pages = {101--119},
-	file = {The Sign of the Elevation of th - Lombard, Etienne.pdf:C\:\\Users\\DELL\\Zotero\\storage\\UJN5D9KH\\The Sign of the Elevation of th - Lombard, Etienne.pdf:application/pdf},
-}
-
-@book{crystal_dictionary_2008,
-	address = {Malden, MA ; Oxford},
-	edition = {6th ed},
-	series = {The language library},
-	title = {A dictionary of linguistics and phonetics},
-	isbn = {978-1-4051-5296-9 978-1-4051-5297-6},
-	language = {en},
-	publisher = {Blackwell Pub},
-	author = {Crystal, David},
-	year = {2008},
-	note = {OCLC: ocn187300284},
-	keywords = {Linguistics, Dictionaries},
-	file = {Crystal- 2008 - A dictionary of linguistics and phonetics.pdf:C\:\\Users\\DELL\\Zotero\\storage\\PUMGNP2R\\Crystal and Crystal - 2008 - A dictionary of linguistics and phonetics.pdf:application/pdf},
-}
-
-@phdthesis{vinceslas_formant_2011,
-	address = {Paris},
-	title = {Formant {Bandwidth} and {Resilience} of {Speech} to {Noise}},
-	language = {en},
-	school = {Universite Paris Descartes},
-	author = {Vinceslas, Leny},
-	year = {2011},
-}
-
-@article{patel_influence_2008,
-	title = {The {Influence} of {Linguistic} {Content} on the {Lombard} {Effect}},
-	volume = {51},
-	issn = {1092-4388, 1558-9102},
-	language = {en},
-	number = {1},
-	urldate = {2020-10-19},
-	journal = {Journal of Speech, Language, and Hearing Research},
-	author = {Patel, Rupal and Schell, Kevin W.},
-	month = feb,
-	year = {2008},
-	pages = {209--220},
-
-}
-
-@article{alexanderson_animated_2014,
-	title = {Animated {Lombard} speech: {Motion} capture, facial animation and visual intelligibility of speech produced in adverse conditions},
-	volume = {28},
-	issn = {08852308},
-	shorttitle = {Animated {Lombard} speech},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0885230813000168},
-	doi = {10.1016/j.csl.2013.02.005},
-	abstract = {In this paper we study the production and perception of speech in diverse conditions for the purposes of accurate, ﬂexible and highly intelligible talking face animation. We recorded audio, video and facial motion capture data of a talker uttering a set of 180 short sentences, under three conditions: normal speech (in quiet), Lombard speech (in noise), and whispering. We then produced an animated 3D avatar with similar shape and appearance as the original talker and used an error minimization procedure to drive the animated version of the talker in a way that matched the original performance as closely as possible. In a perceptual intelligibility study with degraded audio we then compared the animated talker against the real talker and the audio alone, in terms of audio-visual word recognition rate across the three different production conditions. We found that the visual intelligibility of the animated talker was on par with the real talker for the Lombard and whisper conditions. In addition we created two incongruent conditions where normal speech audio was paired with animated Lombard speech or whispering. When compared to the congruent normal speech condition, Lombard animation yields a signiﬁcant increase in intelligibility, despite the AV-incongruence. In a separate evaluation, we gathered subjective opinions on the different animations, and found that some degree of incongruence was generally accepted. © 2013 Elsevier Ltd. Open access under CC BY-NC-ND license.},
-	language = {en},
-	number = {2},
-	urldate = {2020-10-19},
-	journal = {Computer Speech \& Language},
-	author = {Alexanderson, Simon and Beskow, Jonas},
-	month = mar,
-	year = {2014},
-	pages = {607--618},
-	file = {Alexanderson and Beskow - 2014 - Animated Lombard speech Motion capture, facial an.pdf:C\:\\Users\\DELL\\Zotero\\storage\\XV5RIVQR\\Alexanderson and Beskow - 2014 - Animated Lombard speech Motion capture, facial an.pdf:application/pdf},
-}
-
-@phdthesis{fux_vers_2012,
-	title = {Vers un système indiquant la distance d'un locuteur par transformation de sa voix},
-	language = {fr},
-	school = {Universit\'{e} de Grenoble},
-	author = {Fux, Thibaut},
-	year = {2012},
-	file = {Fux - Vers un système indiquant la distance d'un locuteu.pdf:C\:\\Users\\DELL\\Zotero\\storage\\6EEY456W\\Fux - Vers un système indiquant la distance d'un locuteu.pdf:application/pdf},
-}
-
-@book{bloomfield_language_1933,
-	address = {New York, NY, USA},
-	title = {Language},
-	publisher = {Henry Holt \& Co},
-	author = {Bloomfield, Leonard},
-	year = {1933},
-	note = {Publisher: Inc},
-}
-
-@incollection{scheer_how_2015,
-	title = {How {Diachronic} is {Synchronic} {Grammar}?},
-	booktitle = {The {Oxford} handbook of historical phonology},
-	author = {Scheer, Tobias},
-	year = {2015},
-}
-
-@article{chomsky_aspects_1965,
-	title = {Aspects of the theory of syntax.},
-	author = {Chomsky, Noam},
-	year = {1965},
-	note = {Publisher: MIT Press},
-	file = {Chomsky - ASPECTS OF THE THEORY OF SYNTAX.pdf:C\:\\Users\\DELL\\Zotero\\storage\\WPRSL74G\\Chomsky - ASPECTS OF THE THEORY OF SYNTAX.pdf:application/pdf;Chomsky - ASPECTS OF THE THEORY OF SYNTAX.pdf:C\:\\Users\\DELL\\Zotero\\storage\\JE9BYGIY\\Chomsky - ASPECTS OF THE THEORY OF SYNTAX.pdf:application/pdf},
-}
-
-@book{boeckx_reflections_2021,
-	title = {Reflections on language evolution: {From} minimalism to pluralism},
-	volume = {6},
-	publisher = {Language Science Press},
-	author = {Boeckx, Cedric},
-	year = {2021},
-}
-
-@article{lastra_modo_2000,
-	title = {El modo de vida como factor sociolingüístico en la ciudad de {M\'{e}xico}},
-	journal = {Estructuras en contexto. Estudios de variación lingüística},
-	author = {Lastra, Yolanda and Butragueño, Pedro Martín},
-	year = {2000},
-	note = {Publisher: JSTOR},
-	pages = {13--43},
-}
-
-@article{international_standard_iso_226_2003_acousticsnormal_2003,
-	title = {Acoustics-Normal Equal-Loudness-Level Contours},
-	journal = {International Organization for Standardization, Geneva, Switzerland},
-	author = {International standard ISO 226: 2003},
-	year = {2003},
-}
-
-@misc{ish_ishwar_spectrogram_2005,
-	title = {Spectrogram of American English vowels [i, u, A] showing the formants F1 and F2},
-	url = {\url{https://commons.wikimedia.org/wiki/File:Spectrogram_-iua-.png}},
-	urldate = {2022-05-26},
-	author = {Wikimedia Contributors},
-	collaborator = {Ish ishwar},
-	year = {2005},
-}
-
-@misc{__diagram_2018,
-	title = {Diagram of average vowel formants},
-	url = {https://commons.wikimedia.org/wiki/File:Average_vowel_formants_F1_F2.png},
-	urldate = {2022-05-26},
-	author = {{Wikimedia Contributors}},
-	collaborator = {{Любослов Езыкин}},
-	month = jul,
-	year = {2018},
-}
-
-@misc{grendelkhan_redrawn_2004,
-	title = {Redrawn {IPA} chart, vowels},
-	url = {https://commons.wikimedia.org/wiki/File:Ipa-chart-vowels.png},
-	author = {{Wikimedia Contributors}},
-	collaborator = {{Grendelkhan} and {Nohat}},
-	month = jan,
-	year = {2004},
-}
-
-@misc{bearnfaeder_spectrogram_2010,
-	title = {Spectrogram showing {VOT} differences in {English} ``die'' and ``tie''},
-	url = {https://commons.wikimedia.org/wiki/File:Voice_Onset_Timing_differences_for_English_Tie_and_Die.jpg},
-	urldate = {2022-05-26},
-	author = {{Wikimedia Contributors}},
-	collaborator = {{Bearnfæder}},
-	month = apr,
-	year = {2010},
-}
-
-@article{perniss_why_2018,
-	title = {Why we should study multimodal language},
-	volume = {9},
-	journal = {Frontiers in psychology},
-	author = {Perniss, Pamela},
-	year = {2018},
-	note = {Publisher: Frontiers},
-	pages = {1109},
-}
-
-@article{holler_multimodal_2019,
-	title = {Multimodal language processing in human communication},
-	volume = {23},
-	number = {8},
-	journal = {Trends in Cognitive Sciences},
-	author = {Holler, Judith and Levinson, Stephen C},
-	year = {2019},
-	note = {Publisher: Elsevier},
-	pages = {639--652},
-}
-
-@article{pinker_language_1994,
-	title = {The {Language} {Instinct}: {How} the {Mind} {Creates}},
-	journal = {Language. New York: Harper Collins},
-	author = {Pinker, Steven},
-	year = {1994},
-}
-
-@article{lecumberri_non-native_2010,
-	title = {Non-native speech perception in adverse conditions: {A} review},
-	volume = {52},
-	number = {11-12},
-	journal = {Speech communication},
-	author = {Lecumberri, Maria Luisa Garcia and Cooke, Martin and Cutler, Anne},
-	year = {2010},
-	note = {Publisher: Elsevier},
-	pages = {864--886},
-}
-
-@book{wilcox_fundamentals_2001,
-	title = {Fundamentals of modern statistical methods: {Substantially} improving power and accuracy},
-	volume = {249},
-	publisher = {Springer},
-	author = {Wilcox, Rand R},
-	year = {2001},
-}
-
-@article{cade_gentle_2003,
-	title = {A gentle introduction to quantile regression for ecologists},
-	volume = {1},
-	number = {8},
-	journal = {Frontiers in Ecology and the Environment},
-	author = {Cade, Brian S and Noon, Barry R},
-	year = {2003},
-	note = {Publisher: Wiley Online Library},
-	pages = {412--420},
-}
-
-@book{kreidler_pronunciation_2008,
-	title = {The pronunciation of {English}: {A} course book},
-	publisher = {John Wiley \& Sons},
-	author = {Kreidler, Charles W},
-	year = {2008},
-}
-
-@misc{lennes_automatic_2005,
-	title = {Automatic forced alignment of words and phonemes within previously annotated utterances},
-	url = {https://lennes.github.io/spect/},
-	abstract = {This script automatically aligns the words and phonemes within annotated utterances in a TextGrid. The language of the transcribed utterances can be selected by the user. The script automatically passes through each annotated interval in the given tier and runs the forced alignment command on them. New tiers will be created with the segmentation of words and phonemes suggested by eSpeak.
-The script utilizes the eSpeak based automatic aligner that is available in the TextGrid editor window in Praat, see, e.g., http://info.linguistlist.org/aardvarc/resources/AARDVARC\_Boersma\_Abstract.pdf.},
-	author = {Lennes, Mietta Emilia},
-	year = {2005},
-}
-
-@article{akritas_theil-sen_1995,
-	title = {The {Theil}-{Sen} estimator with doubly censored data and applications to astronomy},
-	volume = {90},
-	number = {429},
-	journal = {Journal of the American Statistical Association},
-	author = {Akritas, Michael G and Murphy, Susan A and Lavalley, Michael P},
-	year = {1995},
-	note = {Publisher: Taylor \& Francis},
-	pages = {170--177},
-}
-
-@incollection{thomas_instrumental_2013,
-	address = {Oxford, England},
-	edition = {Second},
-	title = {Instrumental phonetics},
-	booktitle = {The handbook of language variation and change},
-	publisher = {Wiley-Blackwell},
-	author = {Thomas, Erik R},
-	year = {2013},
-	pages = {168--200},
-}
-
-@book{biadsy_automatic_2011,
-	title = {Automatic dialect and accent recognition and its application to speech recognition},
-	publisher = {Columbia University},
-	author = {Biadsy, Fadi},
-	year = {2011},
-}
-
-@article{gregor_disability_2005,
-	title = {Disability and technology: building barriers or creating opportunities?},
-	volume = {64},
-	journal = {Advances in computers},
-	author = {Gregor, Peter and Sloan, David and Newell, Alan F},
-	year = {2005},
-	note = {Publisher: Elsevier},
-	pages = {283--346},
-}
-
-@article{evans_myth_2009,
-	title = {The myth of language universals: {Language} diversity and its importance for cognitive science},
-	volume = {32},
-	number = {5},
-	journal = {Behavioral and brain sciences},
-	author = {Evans, Nicholas and Levinson, Stephen C},
-	year = {2009},
-	note = {Publisher: Cambridge University Press},
-	pages = {429--448},
-}
-
-@article{kwon_gender_2010,
-	title = {Gender difference in speech intelligibility using speech intelligibility tests and acoustic analyses},
-	volume = {2},
-	number = {3},
-	journal = {The journal of advanced prosthodontics},
-	author = {Kwon, Ho-Beom},
-	year = {2010},
-	note = {Publisher: The Korean Academy of Prosthodontics},
-	pages = {71--76},
-}
-
-@article{yoho_are_2019,
-	title = {Are there sex effects for speech intelligibility in {American} {English}? {Examining} the influence of talker, listener, and methodology},
-	volume = {81},
-	number = {2},
-	journal = {Attention, Perception, \& Psychophysics},
-	author = {Yoho, Sarah E and Borrie, Stephanie A and Barrett, Tyson S and Whittaker, Dane B},
-	year = {2019},
-	note = {Publisher: Springer},
-	pages = {558--570},
-}
-
-@misc{tigrre_ampluch_re_2020,
-	type = {{YouTube} {Comment}},
-	title = {Re: {How} did the {First} {Language} {Begin}? {The} {Mystery} of the {Pirahã}},
-	url = {https://www.youtube.com/watch?v=B5lzt42Tb20},
-	abstract = {Fun fact: In my work we used walkie-talkies a lot. Radio language doesnt have recursion. You invent ways to form simple phrases you would never use in normal speaking.
-If you don't adapt your language, you can't be understood.},
-	author = {{Tigrre Ampluch}},
-	year = {2020},
-}
-
-@misc{north_atlantic_treaty_organisation_nato_2016,
-	title = {{THE} {NATO} {PHONETIC} {ALPHABET}},
-	url = {https://www.nato.int/cps/en/natohq/declassified_136216.htm#R701378-26C85479-W4VODOTJ},
-	urldate = {2022-08-14},
-	journal = {NATO Declassified},
-	author = {{North Atlantic Treaty Organisation}},
-	month = oct,
-	year = {2016},
-}
-
-@article{wells_computer-coding_1995,
-	title = {Computer-coding the {IPA}: a proposed extension of {SAMPA}},
-	volume = {4},
-	number = {28},
-	journal = {Revised draft},
-	author = {Wells, John C},
-	year = {1995},
-	pages = {1995},
-}
-
 @misc{r_core_team_r_2018,
-	title = {R: {A} language and environment for statistical computing; 2018},
-	author = {{R Core Team}},
-	year = {2018},
-}
-
-@book{kehrein_phonological_2013,
-	title = {Phonological representation and phonetic phasing: affricates and laryngeals},
-	volume = {466},
-	publisher = {Walter de Gruyter},
-	author = {Kehrein, Wolfgang},
-	year = {2013},
-}
-
-@phdthesis{la_charite_internal_1993,
-	type = {{PhD} {Thesis}},
-	title = {The internal structure of {Affricates}.},
-	school = {University of Ottawa (Canada)},
-	author = {La Charit\'{e}, Darlene},
-	year = {1993},
-}
-
-@book{cairns_handbook_2010,
-	title = {Handbook of the syllable},
-	publisher = {Brill},
-	author = {Cairns, Charles E and Raimy, Eric},
-	year = {2010},
-}
-
-@book{kahn_syllable-based_2015,
-	title = {Syllable-based generalizations in {English} phonology},
-	publisher = {Routledge},
-	author = {Kahn, Daniel},
-	year = {2015},
-}
-
-@book{mcloughlin_speech_2016,
-	title = {Speech and {Audio} {Processing}: a {MATLAB}-based approach},
-	publisher = {Cambridge University Press},
-	author = {McLoughlin, Ian Vince},
-	year = {2016},
-}
-
-@book{bolinger_intonation_1986,
-	title = {Intonation and its parts: {Melody} in spoken {English}},
-	publisher = {Stanford University Press},
-	author = {Bolinger, Dwight and Bolinger, Dwight Le Merton},
-	year = {1986},
-}
-
-@incollection{kirby_standard_2018,
-	address = {Jena},
-	title = {Standard cross-cultural sample},
-	url = {https://d-place.org/contributions/SCCS},
-	publisher = {Max Planck Institute for the Science of Human History},
-	editor = {Kirby, Kate and Greenhill, Simon and Forkel, Robert},
-	year = {2018},
-}
-
-@article{cheyne_talker--listener_2009,
-	title = {Talker-to-listener distance effects on speech production and perception},
-	volume = {126},
-	number = {4},
-	journal = {The Journal of the Acoustical Society of America},
-	author = {Cheyne, Harold A and Kalgaonkar, Kaustubh and Clements, Mark and Zurek, Patrick},
-	year = {2009},
-	note = {Publisher: Acoustical Society of America},
-	pages = {2052--2060},
-}
-
-@article{meyer_whistled_2015,
-	title = {Whistled languages},
-	journal = {A Worldwide Inquiry on Human Whistled Speech; Springer: Heidelberg, Germany; New York, NY, USA},
-	author = {Meyer, Julien},
-	year = {2015},
-	note = {Publisher: Springer},
-}
-
-@article{buuren_mice_2011,
-	title = {mice: {Multivariate} {Imputation} by {Chained} {Equations} in {R}},
-	volume = {45},
-	doi = {10.18637/jss.v045.i03},
-	number = {3},
-	journal = {Journal of Statistical Software},
-	author = {Buuren, Stef van and Groothuis-Oudshoorn, Karin},
-	year = {2011},
-	pages = {1--67},
-}
-
-@misc{raiche_nfactors_2022,
-	title = {{nFactors}: {Parallel} {Analysis} and {Other} {Non} {Graphical} {Solutions} to the {Cattell} {Scree} {Test}},
-	url = {https://CRAN.R-project.org/package=nFactors},
-	author = {Raiche, Gilles and Magis, David},
-	year = {2022},
-	annote = {R package version 2.4.1.1},
-}
-
-@article{shattuck1996prosody,
-	title={A prosody tutorial for investigators of auditory sentence processing},
-	author={Shattuck-Hufnagel, Stefanie and Turk, Alice E},
-	journal={Journal of psycholinguistic research},
-	volume={25},
-	pages={193--247},
-	year={1996},
-	publisher={Kluwer Academic Publishers-Plenum Publishers}
-}
-@inproceedings{fitzpatrick2013auditory,
-	title={Auditory and auditory-visual Lombard speech perception by younger and older adults},
-	author={Fitzpatrick, Michael and Kim, Jeesun and Davis, Chris},
-	booktitle={Auditory-Visual Speech Processing (AVSP) 2013},
-	year={2013}
-}
-
-@book{searle1969speech,
-	title={Speech acts: An essay in the philosophy of language},
-	author={Searle, John R},
-	volume={626},
-	year={1969},
-	publisher={Cambridge university press}
-}
-
-
-@phdthesis{martinez_olivera_protocolo_2023,
-	address = {México},
-	title = {Protocolo de documentación del {Habla} {Lombard} para su comparación tipológica},
-	language = {ES},
-	school = {Escuela Nacional de Antropología e Historia},
-	author = {Martínez Olivera, Rodrigo Manuel},
-	collaborator = {Everett, Caleb},
-	year = {2023},
-}
-
-@article{patel2008influence,
-	title={The influence of linguistic content on the Lombard effect},
-	author={Patel, Rupal and Schell, Kevin W},
-	year={2008},
-	publisher={ASHA}
-}
-
-@book{podesva2014research,
-	title={Research methods in linguistics},
-	author={Podesva, Robert J and Sharma, Devyani},
-	year={2014},
-	publisher={Cambridge University Press}
+  title={R: A language and environment for statistical computing. R Foundation for Statistical Computing.[Programvara]. Vienna, Austria},
+  author={RCore, TEAM},
+  year={2018}
 }
 
 @article{Atkinson2011,
@@ -730,4 +211,41 @@ If you don't adapt your language, you can't be understood.},
   pages={2047},
   year={2019},
   publisher={Nature Publishing Group UK London}
+}
+
+@article{Schreier2009Language,
+title={Language in Isolation, and Its Implications for Variation and Change},
+author={D. Schreier},
+journal={Lang. Linguistics Compass},
+year={2009},
+volume={3},
+pages={682-699},
+doi={10.1111/j.1749-818X.2009.00130.x}
+}
+
+@article{Padilla-Iglesias2020Geographical,
+title={Geographical and social isolation drive the evolution of Austronesian languages},
+author={Cecilia Padilla-Iglesias and E. Gjesfjeld and L. Vinicius},
+journal={PLoS ONE},
+year={2020},
+volume={15},
+doi={10.1371/journal.pone.0243171}
+}
+
+@article{Lee2014Oceanic,
+title={Oceanic barriers promote language diversification in the Japanese Islands},
+author={S. Lee and T. Hasegawa},
+journal={Journal of Evolutionary Biology},
+year={2014},
+volume={27},
+doi={10.1111/jeb.12442}
+}
+
+@article{Huisman2019The,
+title={The geographical configuration of a language area influences linguistic diversity},
+author={John L. A. Huisman and A. Majid and R. van Hout},
+journal={PLoS ONE},
+year={2019},
+volume={14},
+doi={10.1371/journal.pone.0217363}
 }
