--- a/Script/MejorandoSCCS.bib
+++ b/Script/MejorandoSCCS.bib
@@ -249,3 +249,56 @@ year={2019},
 volume={14},
 doi={10.1371/journal.pone.0217363}
 }
+
+@article{pages2002analyse,
+  title={Analyse factorielle multiple appliqu{\'e}e aux variables qualitatives et aux donn{\'e}es mixtes},
+  author={Pag{\`e}s, J{\'e}r{\^o}me},
+  journal={Revue de statistique appliqu{\'e}e},
+  volume={50},
+  number={4},
+  pages={5--37},
+  year={2002},
+  publisher={Soci{\'e}t{\'e} fran{\c{c}}aise de statistique}
+}
+
+@article{husson2013handling,
+  title={Handling missing values in multiple factor analysis},
+  author={Husson, Fran{\c{c}}ois and Josse, Julie},
+  journal={Food quality and preference},
+  volume={30},
+  number={2},
+  pages={77--85},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{pages2004multiple,
+  title={Multiple factor analysis: Main features and application to sensory data},
+  author={Pag{\`e}s, J{\'e}r{\^o}me},
+  journal={Revista Colombiana de Estad\'istica},
+  volume={27},
+  number={1},
+  pages={1--26},
+  year={2004},
+  publisher={Universidad Nacional de Colombia}
+}
+
+@article{abdi2013multiple,
+  title={Multiple factor analysis: principal component analysis for multitable and multiblock data sets},
+  author={Abdi, Herve and Williams, Lynne J and Valentin, Domininique},
+  journal={Wiley Interdisciplinary reviews: computational statistics},
+  volume={5},
+  number={2},
+  pages={149--179},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{abdi2007statis,
+  title={The STATIS method},
+  author={Abdi, Herv{\'e} and Valentin, Dominique},
+  journal={Encyclopedia of Measurement and Statistics. Thousand Oaks: Sage},
+  year={2007},
+  publisher={Citeseer}
+}
+
